--- a/app/views/maintenances/index.html.erb
+++ b/app/views/maintenances/index.html.erb
@@ -1,3 +1,43 @@
-<%= month_calendar do |date| %>
-  <%= date %>
-<% end %>
+<h1 class="main_title">（車種）のメンテナンス一覧</h1>
+<p class="distance">現在の走行距離:〇〇km<p>
+
+<div class="item">
+  <div class="item_wrapper">
+    <div class="item_name">エンジンオイル （交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">タイヤ（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">バッテリー（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">スパークプラグ（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">ワイパーゴム（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">エアコンフィルター（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+</div>
+
+<div class="item_setting">
+  <a class="setting" href="#">メンテナンスを記録する</a>
+</div>
+
+<div class="cost">
+  <div class="total_cost">メンテナンス費用の合計:〇〇円</div>
+  <a class="cost_detail" href="#">費用詳細</a>
+</div>
