--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,22 @@
     <header class="header">
       <div class="header__bar row">
         <h1 class="grid-6"><a href="/">AutoAssistant</a></h1>
-        <div class="user_nav grid-6">
-          <a class="post" href="/tweets/new">車両情報 編集</a>
-        </div>
+        <% if user_signed_in? %>
+          <div class="user_nav grid-6">
+            <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
+            <%= link_to "車両を登録する", new_car_path, class: "post" %>
+          </div>
+        <% else %>
+          <div class="grid-6">
+            <%= link_to "ログイン", new_user_session_path, class: "post" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "post" %>
+          </div>
+        <% end %>
       </div>
     </header>
+
     <%= yield %>
+
     <footer>
       <p>
         Copyright AutoAssistasnt 2024.
