--- a/app/views/maintenances/index.html.erb
+++ b/app/views/maintenances/index.html.erb
@@ -1,3 +1,9 @@
+<div class="calendar">
+  <%= month_calendar do |date| %>
+    <%= date %>
+  <% end %>
+</div>
+
 <h1 class="main_title">（車種）のメンテナンス一覧</h1>
 <p class="distance">現在の走行距離:〇〇km<p>
 
@@ -8,11 +14,11 @@
   </div>
 
   <div class="item_wrapper">
-    <div class="item_name">タイヤ（交換サイクル）</div>
+    <div class="item_name">ワイパーゴム（交換サイクル）</div>
     <div class="timing">次回交換時期:</div>
   </div>
 
-  <div class="item_wrapper">
+    <div class="item_wrapper">
     <div class="item_name">バッテリー（交換サイクル）</div>
     <div class="timing">次回交換時期:</div>
   </div>
@@ -23,12 +29,17 @@
   </div>
 
   <div class="item_wrapper">
-    <div class="item_name">ワイパーゴム（交換サイクル）</div>
+    <div class="item_name">エアコンフィルター（交換サイクル）</div>
     <div class="timing">次回交換時期:</div>
   </div>
 
   <div class="item_wrapper">
-    <div class="item_name">エアコンフィルター（交換サイクル）</div>
+    <div class="item_name">CVTフルード（交換サイクル）</div>
+    <div class="timing">次回交換時期:</div>
+  </div>
+
+  <div class="item_wrapper">
+    <div class="item_name">タイヤ（交換サイクル）</div>
     <div class="timing">次回交換時期:</div>
   </div>
 </div>
